# informatics_laboratories_10

./: README.md  pyproject.toml
appendix/: report.docx
articles/templates/: archive.html
blog/: settings.py
